--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.8.1",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "lodash.shuffle": "^4.2.0",
+    "node-sass": "^4.13.1",
+    "normalize.css": "^8.0.1",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
